feat: added GetUserByID endpoint
added filter to get user by id and updated docs
