# cmd/api/routes.go
@@ -11,6 +11,7 @@ func setupRoutes(router *gin.Engine) {
 
 	{
 		v1.GET("/users", controller.ListUsers)
+		v1.GET("/users/:ID", controller.ListUserByID)
 		v1.POST("/users/:name", controller.NewUser)
 		v1.DELETE("/users/delete/:ID", controller.DeleteUser)
 	}
